update gulpfile-zip config

--- a/app/templates/src/_index.html
+++ b/app/templates/src/_index.html
@@ -19,5 +19,8 @@
     <!-- 多玩通用页脚{ -->
     <script src="http://www.duowan.com/assets/js/duowanFooter.js" charset="utf-8"></script>
     <!-- }多玩通用页脚 -->
+
+    <script src="http://assets.dwstatic.com/common/js/jquery.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
