--- a/mobi/templates/src/_index.html
+++ b/mobi/templates/src/_index.html
@@ -1,34 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="apple-itunes-app" content="app-id=" />
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="format-detection" content="telephone=no,address=no,email=no">
-    <!-- apple icon{ -->
+    <meta charset="utf-8">
+    <!-- 禁止百度转码 -->
+    <meta http-equiv="Cache-Control" content="no-siteapp">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+    <meta name="format-detection" content="telephone=no, address=no, email=no">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta http-equiv="cleartype" content="on">
+    <!-- apple store id -->
+    <meta name="apple-itunes-app" content="app-id=">
+    <!-- apple icon -->
     <link rel="apple-touch-icon" sizes="114x114" href="" />
-    <!-- }apple icon -->
 
-    <!-- webapp 隐藏导航底部工具栏{ -->
+    <!-- webapp 隐藏导航底部工具栏 -->
     <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
-    <!-- }webapp 隐藏导航底部工具栏 -->
 
-    <!-- 定义顶部状态栏{ -->
+    <!-- 定义顶部状态栏 -->
     <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
-    <!-- }定义顶部状态栏 -->
 
-    <title>多玩游戏</title>
-    
+    <title></title>
+    <meta name="description" content="">
 </head>
 <body>
 
-    <header>
-    </header>
 
-    <div class="content">
-    </div>
 
 </body>
 </html>
