--- a/app/templates/src4lego/sass/base/_config.scss
+++ b/app/templates/src4lego/sass/base/_config.scss
@@ -1,5 +1,10 @@
 @charset "utf-8";
- 
+
+/*
+ *@ Name:      样式基础配置文件
+ *@ Update:    2014-12-29 12:42:45
+ */
+
 @import "normalize";
 @import "base";
 @import "mixins";
