--- a/app/templates/src4lego/sass/global.scss
+++ b/app/templates/src4lego/sass/global.scss
@@ -1,14 +1,16 @@
-// gobal vars
-$base-color            : #333 !default;
-$base-background-color : #fff !default;
-$base-link-color       : #333 #F40 !default;
-$base-font-size        : 12px !default;
-$base-line-height      : 1.5 !default;
-$base-font-family      : Microsoft YaHei, Tahoma, sans-serif !default;
+@charset "utf-8";
 
-@import "base/config";
-// @import "ui/config";
-@import "slice";
+/* === 全局变量配置 === */
+$base-font-size          : 12px !default; // 字号
+$base-font-family        : Tahoma, Arial, "Helvetica Neue", Helvetica, sans-serif !default; // 字体族
+$base-line-height        : 1.5 !default; // 行号
+$base-color              : #333 !default; // 字体颜色
+$base-background-color   : #fff !default; // 背景颜色
+$base-link-color         : #333 #f40 !default; // 链接颜色[default，hover]
+
+@import "base/config"; // 样式基础设置
+// @import "ui/config"; // LEGO UI
+@import "slice"; // sprites切片样式
 
 body {
     font: #{$base-font-size}/#{$base-line-height} $base-font-family;
