--- a/app/templates/src4pc/_index.html
+++ b/app/templates/src4pc/_index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Keywords" content="demo">
     <meta name="description" content="">
+    <meta name="renderer" content="webkit">
     <title> demo </title>
     <link href="css/global.css" rel="stylesheet">
 </head>
