添加空白文件页面

--- a/app/templates/src4legomobi/_index.html
+++ b/app/templates/src4legomobi/_index.html
@@ -1,17 +1,41 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,width=device-width">
-    <meta name="Keywords" content="">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="">
-    <title>Demos</title>
-    <link href="css/global.css" rel="stylesheet">
+    <meta name="keywords" content="">
+    <meta name="format-detection" content="telephone=no,address=no,email=no">
+    <!-- apple icon{ -->
+    <meta name="apple-itunes-app" content="app-id=" />
+    <link rel="apple-touch-icon" sizes="114x114" href="" />
+    <!-- }apple icon -->
+
+    <!-- webapp 隐藏导航底部工具栏{ -->
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
+    <!-- }webapp 隐藏导航底部工具栏 -->
+
+    <!-- 定义顶部状态栏{ -->
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
+    <!-- }定义顶部状态栏 -->
+
+    <title>多玩游戏</title>
+    <!-- 页面样式入口样式开始 -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- 页面样式入口样式结束 -->
+
+    <!-- Seajs入口开始 -->
+    <script src="http://assets.dwstatic.com/amkit/entry.js"></script>
+    <!-- Seajs入口结束 -->
 
 </head>
 <body>
+    
+    <header>
+    </header>
 
-
-
+    <div class="content">
+    </div>
+        
 </body>
 </html>
