--- a/app/templates/src4legomobi/sass/global.scss
+++ b/app/templates/src4legomobi/sass/global.scss
@@ -5,13 +5,13 @@
 
 /* 拆分调用 */
 /* Legomobi reset */
-@import "legomobi/base";
+@import "legomobi/base/base";
 /* Legomobi sass工具函数 */
-@import "legomobi/tools";
+@import "legomobi/tools/tools";
 /* Legomobi UI */
-@import "legomobi/ui";
+@import "legomobi/ui/ui";
 /* Legomobi Components */
-@import "legomobi/components";
+@import "legomobi/components/components";
 
 
 
