修改空白页链接

--- a/app/templates/src4legomobi/_index.html
+++ b/app/templates/src4legomobi/_index.html
@@ -19,9 +19,9 @@
     <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
     <!-- }定义顶部状态栏 -->
 
-    <title>多玩游戏</title>
+    <title>项目标题</title>
     <!-- 页面样式入口样式开始 -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/global.css">
     <!-- 页面样式入口样式结束 -->
 
     <!-- Seajs入口开始 -->
