--- a/yy/templates/src4lego/sass/ui/_config.scss
+++ b/yy/templates/src4lego/sass/ui/_config.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       LEGO UI 配置文件
- *@ Update:     2014-12-26 09:37:48
+ *@name:   LEGO UI 配置文件
+ *@update: 2014-12-26 09:37:48
  */
  
 @import "ui-util"; // 辅助工具类
