--- a/yy/templates/src4lego/sass/ui/_ui-accordion.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-accordion.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       accordion手风琴基础UI模块
- *@ Update:     2014-12-01 17:23:21
+ *@name:   accordion手风琴基础UI模块
+ *@update: 2014-12-01 17:23:21
  */
  
 /* ===基类=== */
