--- a/yy/templates/src4lego/sass/ui/_ui-button.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-button.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       按钮基础模块
- *@ Update:     2014-11-18 21:34:03
+ *@name:   按钮基础模块
+ *@update: 2014-11-18 21:34:03
  */
 
 /* ===基类=== */
