--- a/yy/templates/src4lego/sass/ui/_ui-dialog.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-dialog.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       dialog基础模块
- *@ Update:     2014-12-01 19:54:05
+ *@name:   dialog基础模块
+ *@update: 2014-12-01 19:54:05
  */
 
 /* ===基类=== */
