--- a/yy/templates/src4lego/sass/ui/_ui-marquee.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-marquee.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       轮播文字条基础UI模块
- *@ Update:     2014-12-03 23:42:06
+ *@name:   轮播文字条基础UI模块
+ *@update: 2014-12-03 23:42:06
  */
  
 /* ===基类=== */
