--- a/yy/templates/src4lego/sass/ui/_ui-media.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-media.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       图文混排基础模块
- *@ Update:     2014-06-07
+ *@name:   图文混排基础模块
+ *@update: 2014-06-07
  */
 
 $img-width: 130px; // 图片宽度
