--- a/yy/templates/src4lego/sass/ui/_ui-paging.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-paging.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       分页导航基础模块
- *@ Update:     2014-11-11 21:28:11
+ *@name:   分页导航基础模块
+ *@update: 2014-11-11 21:28:11
  */
 
 /* ===基类=== */
