--- a/yy/templates/src4lego/sass/ui/_ui-tab.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-tab.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       tab基础模块
- *@ Update:     2014-11-14 14:23:07
+ *@name:   tab基础模块
+ *@update: 2014-11-14 14:23:07
  */
  
 
