--- a/yy/templates/src4lego/sass/ui/_ui-table.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-table.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       table表格基础模块
- *@ Update:     2014-11-11 21:22:19
+ *@name:   table表格基础模块
+ *@update: 2014-11-11 21:22:19
  */
  
 $font-size: 12px; // 表格字号
