--- a/yy/templates/src4lego/sass/ui/_ui-util.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-util.scss
@@ -1,8 +1,7 @@
 /**
- * @Author:    liveme
- * @Update:    2014-12-05 10:22:57
- * @Copyright: 基于 Neat.css | MIT License     
- * @Doc:
+ * @author:    liveme
+ * @update:    2015-01-07 18:28:25
+ * @copyright: 基于 Neat.css | MIT License     
 */
 
 
