--- a/yy/templates/src4lego/sass/global.scss
+++ b/yy/templates/src4lego/sass/global.scss
@@ -8,7 +8,7 @@ $base-color              : #333 !default; // 字体颜色
 $base-background-color   : #fff !default; // 背景颜色
 $base-link-color         : #333 #f40 !default; // 链接颜色[default，hover]
 
-@import "base/config"; // 样式基础设置
+@import "base/base"; // 样式基础设置
 // @import "ui/config"; // LEGO UI
 @import "slice"; // sprites切片样式
 
