--- a/yy/templates/src4lego/sass/ui/_ui-badge.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-badge.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       徽章基础UI组件
- *@ Update:     2014-11-30 15:03:02
+ *@name:   徽章基础UI组件
+ *@update: 2014-11-30 15:03:02
  */
  
 /* ===基类=== */
