--- a/yy/templates/src4lego/sass/ui/_ui-box.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-box.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       box区块基础模块
- *@ Update:     2014-06-07
+ *@name:   box区块基础模块
+ *@update: 2014-06-07
  */
 
 /* ===基类=== */
