--- a/yy/templates/src4lego/sass/ui/_ui-carousel.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-carousel.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       Carousel旋转木马基础UI模块
- *@ Update:     2014-11-30 15:03:02
+ *@name:   Carousel旋转木马基础UI模块
+ *@update: 2014-11-30 15:03:02
  */
  
 /* ===基类=== */
