--- a/yy/templates/src4lego/sass/ui/_ui-form.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-form.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       表单基础模块
- *@ Update:     2014-11-02 23:06:26
+ *@name:   表单基础模块
+ *@update: 2014-11-02 23:06:26
  */
 
 /* ===基类=== */
