--- a/yy/templates/src4lego/sass/ui/_ui-slide.scss
+++ b/yy/templates/src4lego/sass/ui/_ui-slide.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /*
- *@ Name:       图片轮播基础UI模块
- *@ Update:     2014-11-13 13:36:55
+ *@name:   图片轮播基础UI模块
+ *@update: 2014-11-13 13:36:55
  */
  
 /* ===基类=== */
