初始化模板优化

--- a/yy/templates/src4lego/_index.html
+++ b/yy/templates/src4lego/_index.html
@@ -14,13 +14,11 @@
     <div class="wrap">  
 
     </div>
-    <!-- 多玩通用导航{ -->
+    
     <script src="http://www.duowan.com/public/s/i/navbar/navbar.js" charset="utf-8"></script>
-    <!-- }多玩通用导航 -->
-    <!-- 多玩通用页脚{ -->
+    <!-- 多玩通用导航 end -->
     <script src="http://www.duowan.com/assets/js/duowanFooter.js" charset="utf-8"></script>
-    <!-- }多玩通用页脚 -->
-
+    <!-- 多玩通用页脚 end -->
     <script src="http://assets.dwstatic.com/common/js/jquery.js"></script>
     <script src="js/main.js"></script>
 </body>
