app资源统一优化，lego sass目录名变更

--- a/app/templates/src4mobi/sass/global.scss
+++ b/app/templates/src4mobi/sass/global.scss
@@ -1,8 +1,3 @@
-/* Base */
-@import "base/normalize";
-@import "base/base";
+@charset "utf-8";
 
-
-@import "slice";
-
-
+@import "slice"; // sprites切片样式
