--- a/app/templates/src4pc/_index.html
+++ b/app/templates/src4pc/_index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="edge">
+    <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Keywords" content="demo">
+    <meta name="Keywords" content="">
     <meta name="description" content="">
     <title> demo </title>
     <link href="css/global.css" rel="stylesheet">
