--- a/app/templates/src4mobi/_index.html
+++ b/app/templates/src4mobi/_index.html
@@ -2,10 +2,21 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,width=device-width">
-    <meta name="Keywords" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="">
-    <title>Demos</title>
+    <meta name="keywords" content="">
+    <meta name="format-detection" content="telephone=no,address=no,email=no">
+
+    <meta name="apple-itunes-app" content="app-id=" />
+    <link rel="apple-touch-icon" sizes="114x114" href="" />
+
+    <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
+    <!-- webapp 隐藏导航底部工具栏 end -->
+
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
+    <!-- 定义顶部状态栏 end -->
+
+    <title> demo </title>
     <link href="css/global.css" rel="stylesheet">
 
 </head>
