--- a/app/templates/src4pc/sass/global.scss
+++ b/app/templates/src4pc/sass/global.scss
@@ -1,7 +1,3 @@
-@import "base/normalize";
-@import "base/base";
-@import "base/mixins";
-@import "base/css3";
+@charset "utf-8";
 
-@import "slice";
-
+@import "slice"; // sprites切片样式
