--- a/yy/templates/src4pc/_index.html
+++ b/yy/templates/src4pc/_index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Keywords" content="demo">
-    <meta name="description" content="">
     <meta name="renderer" content="webkit">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Keywords" content="">
+    <meta name="description" content="">
     <title> demo </title>
     <link href="css/global.css" rel="stylesheet">
 </head>
