--- a/yy/templates/src4pc/sass/global.scss
+++ b/yy/templates/src4pc/sass/global.scss
@@ -1,17 +1,15 @@
-// gobal vars
-$base-color            : #333 !default;
-$base-background-color : #fff !default;
-$base-link-color       : #333 #F40 !default;
-$base-font-size        : 12px !default;
-$base-line-height      : 1.5 !default;
-$base-font-family      : Microsoft YaHei, Tahoma, sans-serif !default;
+@charset "utf-8";
 
-@import "base/normalize";
-@import "base/base";
-@import "base/mixins";
-@import "base/css3";
+/* === 全局变量配置 === */
+$base-font-size          : 12px !default; // 字号
+$base-font-family        : Tahoma, Arial, "Helvetica Neue", Helvetica, sans-serif !default; // 字体族
+$base-line-height        : 1.5 !default; // 行号
+$base-color              : #333 !default; // 字体颜色
+$base-background-color   : #fff !default; // 背景颜色
+$base-link-color         : #333 #f40 !default; // 链接颜色[default，hover]
 
-@import "slice";
+@import "base/base"; // 样式基础设置
+@import "slice"; // sprites切片样式
 
 body {
     font: #{$base-font-size}/#{$base-line-height} $base-font-family;
@@ -26,4 +24,3 @@ a {
         color: nth($base-link-color,2);
     }
 }
-  
